elementor/src/editor.scss
/* ... */
@-webkit-keyframes icon-spin {
	0% {
		-webkit-transform: rotate(0deg);
		transform: rotate(0deg)
	}

	to {
		-webkit-transform: rotate(1turn);
		transform: rotate(1turn)
	}
}

@keyframes icon-spin {
	0% {
		-webkit-transform: rotate(0deg);
		transform: rotate(0deg)
	}

	to {
		-webkit-transform: rotate(1turn);
		transform: rotate(1turn)
	}
}

@media ( max-width: 1439px ) {
	.ti-tpc-templates-modal {
		.dialog-widget-content {
			max-width: 990px;

			.ti-tpc-template-library-preview {
				iframe {
					width: 1440px;
				}
			}

			.ti-tpc-template-library-template {
				width: calc(25% - 30px);
			}
		}
	}
}

@media ( min-width: 1440px ) {
	.ti-tpc-templates-modal {
		.dialog-widget-content {
			max-width: 1200px;

			.ti-tpc-template-library-preview {
				iframe {
					width: 1710px;
				}
			}

			.ti-tpc-template-library-template {
				width: calc(20% - 30px);
			}
		}
	}
}

